withALB/kube-manifest3/webapp1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp1
  template:
    metadata:
      name: webapp1
      labels:
        app: webapp1
    spec:
      containers:
        - name: webapp1
          image: mohitknamdeo/mywebapp:4.0
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: webapp1-nodeport-service
  labels:
    app: webapp1
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
spec:
  type: NodePort
  selector:
    app: webapp1
  ports:
    - port: 80
      targetPort: 80
